--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
