--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.8",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
@@ -35,6 +36,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -43,5 +45,8 @@
     "react-router-dom": "^7.1.5",
     "sequelize": "^6.37.5",
     "vite": "^6.1.0"
-  }
+  },
+  "overrides": {
+  "@types/express": "^4.17.21"
+}
 }
