--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "@tailwindcss/vite": "^4.0.6",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
@@ -47,6 +50,8 @@
     "vite": "^6.1.0"
   },
   "overrides": {
-  "@types/express": "^4.17.21"
-}
+    "@types/express": "^4.17.21",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.17"
+  }
 }
